2010-01-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: freeze version 2.2.6

2010-01-10 Lorenzo Natale <nat@liralab.it>
	* libYARP_dev: added new IOpenLoopControlRaw/IOpenLoopControl interfaces and implementation class.
    
2010-01-10 Lorenzo Natale <nat@liralab.it>
	* libYARP_dev: added new IAnalogSensor/AnalogSensorClient.

2009-12-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/CMakeLists.txt: remove accidental
	circular dependency between libYARP_dev and yarpmod
	(thanks Baris Akgun)

2009-12-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/modules/CMakeLists.txt: make sure includes and libraries
	are available to yarpmod under all compilation options
	(thanks "Breno")

2009-12-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCore.cpp: suppress port startup
	announcements to name server when only a fake name server
	is available (thanks Philipp Robbel).

2009-12-08  Arjan Gijsberts  <arjan@liralab.it>

	* example/swig/CMakeLists.txt: use parentheses for print 
	statement in embedded Python script to be compatible with 
	Python 3.0. (thanks Severin Lemaignan for report)

2009-12-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Port.cpp: display temporary port names
	correctly when they fail to open (thanks Philipp Robbel).

2009-12-04  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* doc/download.html: release yarp-2.2.5

2009-12-03  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Port.cpp: deal correctly with reads that
	arrive while a reply is being made to another message, using 
	the read(*,true) ... reply(*) mechanism (thanks Ugo, Lorenzo!)

2009-11-30  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/include/yarp/os/ResourceFinder.h: add a
	command to support finding the first existing directory
	in the search path, following Christian Wressnegger's
	use case on the robotcub-hackers mailing list.
